Added changes to buggy form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -49,10 +49,10 @@
 	<p>
 	
 	<label for="flag_color_primary">Flag's colour:</label>
-    <input type="text" name="flag_color_primary" />
+    <input type="color" name="flag_color_primary" value="#66ccff"/>
 	<p>
 	
-	<label for="flag_pattern">Flag's pattern :</label>
+	<label for="flag_pattern">Flag's pattern:</label>
     <select id="patterns">
 		<option value = "plain">Plain</option>
 		<option value = "vstripe">stripe (horizontal)</option>
@@ -63,11 +63,11 @@
 	</select>
 	<p>
 	
-	<label for="flag_color_secondary">Flag's other colour  :</label>
-    <input type="text" name="flag_color_secondary" />
+	<label for="flag_color_secondary">Flag's other colour:</label>
+    <input type="color" name="flag_color_secondary" value="#66ccff"/>
 	<p>
 	
-	<input type="submit" class="button">
+	<input type="submit" class="button" value="Upload buggy">
 	
   </form>
   <p>
