--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -11,6 +11,26 @@
    <tr>
      <td>Wheels:</td> <td> {{ buggy['qty_wheels'] }} </td>
     </tr>
+	<tr>
+     <td>Primary motive power:</td> <td> {{ buggy['power_type'] }} </td>
+	</tr>
+	<tr>
+     <td>Primary motive power units:</td> <td> {{ buggy['power_units'] }} </td>
+	</tr>
+	<tr>
+     <td>Auxilliary motive power:</td> <td> {{ buggy['aux_power_type'] }} </td>
+	 <tr>
+     <td>Auxilliary motive power units:</td> <td> {{ buggy['aux_power_units'] }} </td>
+    </tr>
+	<tr>
+     <td>Flag's colour:</td> <td> {{ buggy['flag_color_primary'] }} </td>
+    </tr>
+	<tr>
+     <td>Flag's pattern:</td> <td> {{ buggy['flag_pattern'] }} </td>
+    </tr>
+	<tr>
+     <td>Flag's other colour:</td> <td> {{ buggy['flag_color_secondary'] }} </td>
+    </tr>
   </table>
 
   <p>
