--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -10,38 +10,76 @@
     <input type="text" name="qty_wheels" />
 	<p>
 	
-	<label for="power_type">Primary motive power:</label>
-    <select id="power">
-		<option value = "petrol">Petrol</option>
-		<option value = "fusion">Fusion</option>
-		<option value = "steam">Steam</option>
-		<option value = "bio">Bio</option>
-		<option value = "electric">Electric</option>
-		<option value = "rocket">Rocket</option>
-		<option value = "hamster">H A M S T E R</option>
-		<option value = "thermo">Thermo</option>
-		<option value = "solar">Solar</option>
-		<option value = "wind">Wind</option>
-	</select>
+	<label for="power_type">Primary motive power:</label><p>
+	
+	<input type="radio" id="petrol" name="power_type" value="Petrol"/>
+	<label for = "petrol">Petrol</label><br>
+	
+	<input type="radio" id="fusion" name="power_type" value="Fusion"/>
+	<label for = "fusion">Fusion</label><br>
+	
+	<input type="radio" id="steam" name="power_type" value="Steam"/>
+	<label for = "steam">Steam</label><br>
+	
+	<input type="radio" id="bio" name="power_type" value="Bio"/>
+	<label for = "bio">Bio</label><br>
+	
+	<input type="radio" id="electric" name="power_type" value="Electric"/>
+	<label for = "electric">Electric</label><br>
+	
+	<input type="radio" id="rocket" name="power_type" value="Rocket"/>
+	<label for = "rocket">Rocket</label><br>
+	
+	<input type="radio" id="hamster" name="power_type" value="H A M S T E R"/>
+	<label for = "hamster">H A M S T E R</label><br>
+	
+	<input type="radio" id="thermo" name="power_type" value="Thermo"/>
+	<label for = "thermo">Thermo</label><br>
+	
+	<input type="radio" id="solar" name="power_type" value="Solar"/>
+	<label for = "solar">Solar</label><br>
+	
+	<input type="radio" id="wind" name="power_type" value="Wind"/>
+	<label for = "wind">Wind</label><br>
+
 	<p>
 	
 	<label for="power_units">Primary motive power units:</label>
     <input type="text" name="power_units" />
 	<p>
 	
-	<label for="aux_power_type">Auxilliary motive power:</label>
-    <select id="aux_power">
-		<option value = "petrol">Petrol</option>
-		<option value = "fusion">Fusion</option>
-		<option value = "steam">Steam</option>
-		<option value = "bio">Bio</option>
-		<option value = "electric">Electric</option>
-		<option value = "rocket">Rocket</option>
-		<option value = "hamster">H A M S T E R</option>
-		<option value = "thermo">Thermo</option>
-		<option value = "solar">Solar</option>
-		<option value = "wind">Wind</option>
-	</select>
+	<label for="aux_power_type">Auxilliary motive power:</label><P>
+    
+	<input type="radio" id="petrol" name="aux_power_type" value="Petrol"/>
+	<label for = "petrol">Petrol</label><br>
+	
+	<input type="radio" id="fusion" name="aux_power_type" value="Fusion"/>
+	<label for = "fusion">Fusion</label><br>
+	
+	<input type="radio" id="steam" name="aux_power_type" value="Steam"/>
+	<label for = "steam">Steam</label><br>
+	
+	<input type="radio" id="bio" name="aux_power_type" value="Bio"/>
+	<label for = "bio">Bio</label><br>
+	
+	<input type="radio" id="electric" name="aux_power_type" value="Electric"/>
+	<label for = "electric">Electric</label><br>
+	
+	<input type="radio" id="rocket" name="aux_power_type" value="Rocket"/>
+	<label for = "rocket">Rocket</label><br>
+
+	<input type="radio" id="hamster" name="aux_power_type" value="H A M S T E R"/>
+	<label for = "hamster">H A M S T E R</label><br>
+	
+	<input type="radio" id="thermo" name="aux_power_type" value="Thermo"/>
+	<label for = "thermo">Thermo</label><br>
+	
+	<input type="radio" id="solar" name="aux_power_type" value="Solar"/>
+	<label for = "solar">Solar</label><br>
+	
+	<input type="radio" id="wind" name="aux_power_type" value="Wind"/>
+	<label for = "wind">Wind</label><br>
+
 	<p>
 	
 	<label for="aux_power_units">Auxilliary motive power units:</label>
@@ -52,15 +90,26 @@
     <input type="color" name="flag_color_primary" value="#66ccff"/>
 	<p>
 	
-	<label for="flag_pattern">Flag's pattern:</label>
-    <select id="patterns">
-		<option value = "plain">Plain</option>
-		<option value = "vstripe">stripe (horizontal)</option>
-		<option value = "hstripe">stripe (vertical)</option>
-		<option value = "dstripe">stripe (diagonal)</option>
-		<option value = "checker">Checker</option>
-		<option value = "spot">Spot</option>
-	</select>
+	<label for="flag_pattern">Flag's pattern:</label><p>
+
+	<input type="radio" id="plain" name="flag_pattern" value="Plain"/>
+	<label for = "plain">Plain</label><br>
+	
+	<input type="radio" id="vstripe" name="flag_pattern" value="stripe (horizontal)"/>
+	<label for = "vstripe">stripe (horizontal)</label><br>
+	
+	<input type="radio" id="hstripe" name="flag_pattern" value="stripe (vertical)"/>
+	<label for = "hstripe">stripe (vertical)</label><br>
+	
+	<input type="radio" id="dstripe" name="flag_pattern" value="stripe (diagonal)"/>
+	<label for = "dstripe">stripe (diagonal)</label><br>
+	
+	<input type="radio" id="checker" name="flag_pattern" value="Checker"/>
+	<label for = "checker">Checker</label><br>
+	
+	<input type="radio" id="spot" name="flag_pattern" value="Spot"/>
+	<label for = "spot">Spot</label><br>
+	
 	<p>
 	
 	<label for="flag_color_secondary">Flag's other colour:</label>
