--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -5,32 +5,86 @@
   <h1>Buggy</h1>
 
   <table>
-   <tr>
+    <tr>
      <td>ID:</td> <td> {{ buggy['id'] }} </td>
     </tr>
-   <tr>
+	
+    <tr>
      <td>Wheels:</td> <td> {{ buggy['qty_wheels'] }} </td>
     </tr>
+	
 	<tr>
      <td>Primary motive power:</td> <td> {{ buggy['power_type'] }} </td>
 	</tr>
+	
 	<tr>
      <td>Primary motive power units:</td> <td> {{ buggy['power_units'] }} </td>
 	</tr>
+	
 	<tr>
      <td>Auxilliary motive power:</td> <td> {{ buggy['aux_power_type'] }} </td>
-	 <tr>
+	</tr>
+	
+	<tr>
      <td>Auxilliary motive power units:</td> <td> {{ buggy['aux_power_units'] }} </td>
     </tr>
+	
+	<tr>
+     <td>Hamster booster:</td> <td> {{ buggy['hamster_booster'] }} </td>
+    </tr>
+	
 	<tr>
      <td>Flag's colour:</td> <td> {{ buggy['flag_color_primary'] }} </td>
     </tr>
+	
 	<tr>
      <td>Flag's pattern:</td> <td> {{ buggy['flag_pattern'] }} </td>
     </tr>
+	
 	<tr>
      <td>Flag's other colour:</td> <td> {{ buggy['flag_color_secondary'] }} </td>
     </tr>
+	
+	<tr>
+     <td>Types of tyres:</td> <td> {{ buggy['tyres'] }} </td>
+    </tr>
+	
+	<tr>
+     <td>Number of tyres:</td> <td> {{ buggy['qty_tyres'] }} </td>
+    </tr>
+	
+	<tr>
+     <td>Armour:</td> <td> {{ buggy['armour'] }} </td>
+    </tr>
+	
+	<tr>
+     <td>Offensive capability:</td> <td> {{ buggy['attack'] }} </td>
+    </tr>
+	
+	<tr>
+     <td>Number of attacks:</td> <td> {{ buggy['qty_attacks'] }} </td>
+    </tr>
+	
+	<tr>
+     <td>Fireproof?:</td> <td> {{ buggy['fireproof'] }} </td>
+    </tr>
+	
+	<tr>
+     <td>Insulated?:</td> <td> {{ buggy['insulated'] }} </td>
+    </tr>
+	
+	<tr>
+     <td>Antibiotic?:</td> <td> {{ buggy['antibiotic'] }} </td>
+    </tr>
+	
+	<tr>
+     <td>Banging sound system?:</td> <td> {{ buggy['banging'] }} </td>
+    </tr>
+	
+	<tr>
+     <td>Race computer algorithm:</td> <td> {{ buggy['algo'] }} </td>
+    </tr>
+
   </table>
 
   <p>
