changed the appearance of index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,31 @@
     Mia's buggy editor: hamster boogaloo
   </h1>
 
-  <div class="spacer">
-    <a href="/new" class="button">Make buggy</a>
-    <a href="/buggy" class="button">Show buggy</a>
-    <a href="/json" class="button">Get buggy JSON</a>
-	<a href="/delete" class="button">Delete buggy</a>
-  </div>
+	<center>
+		<div class="spacer">
+			<div class = "box" style="background:#e21836;">
+				<a href="/new">
+				<img class="image" src="/static/img/build.png">
+				<div class="overlay"><div class="text">Make buggy</div></div></a>
+			</div>
+			
+			<div class = "box" style="background:#f68e1f;">
+			<img class="image" src="/static/img/show.png">
+			<a href="/buggy"><div class="overlay"><div class="text">Show buggy</div></div></a>
+			</div>
+			
+			<div class = "box" style="background:#07bbc1;">
+			<img class="image" src="/static/img/json.png">
+			<a href="/json"><div class="overlay"><div class="text">Get buggy JSON</div></div></a>
+			</div>
+			
+			<div class = "box" style="background:#87c440;">
+			<img class="image" src="/static/img/delete.png">
+			<a href="/delete"><div class="overlay"><div class="text">Delete buggy</div></div></a>
+			</div>
+			
+		 </div>
+	</center>
 
   <p>
     Use this editor to specify a racing buggy. The editor saves it in its
