--- a/static/app.css
+++ b/static/app.css
@@ -3,7 +3,7 @@ html{
   padding: 0; 
 }
 body {
-  font-family: "Source Sans Pro","Helvetica Neue",Arial,Helvetica,sans-serif;
+  font-family:'Ubuntu', sans-serif;
   margin: 0;
   padding: 0;
   font-size: 1.2em;
@@ -28,7 +28,7 @@ h1 {
 p {
   margin: 1em 0;
 }
-a.button, input.button {
+.button, input.button {
   border:1px solid black;
   padding:0.5em;
   margin:0.5em;
@@ -38,7 +38,7 @@ a.button, input.button {
   color: black;
   box-shadow: 5px 5px 5px #999999;
 }
-a.button:hover {
+.button:hover {
   background-color: black;
   color: white;
 }
@@ -66,12 +66,69 @@ select {
 }
 
 .spacer {
-  margin: 3em 0;
+  margin: 3em 3em 3em 3em;
 }
 
 #error{
 	color:#ff0000;
 }
 
+.box {
+	border-radius: 25px;
+	background: #2d1a53;
+	padding: 20px; 
+	height:15vw;
+	width:15vw;
+	transition: .4s ease;
+	position:relative;
+	display: inline-block;
+	top:145;
+	margin-right:15px;
+	margin-left:15px;
+}
+
+.image {
+	height:15vw;
+	width:15vw;
+	transition: .4s ease;
+}
+
+.box:hover .image {
+	filter:blur(3px);
+}
+
+.text {
+	white-space: nowrap; 
+	color: black;
+	font-size: 30px;
+	position: absolute;
+	overflow: hidden;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+}
+
+.overlay {
+	position: absolute;
+	bottom: 100%;
+	left: 0;
+	right: 0;
+	overflow: hidden;
+	width: 100%;
+	height:0;
+	transition: .4s ease;
+}
+
+.box:hover{
+	opacity: 0.8;
+	filter: brightness(1.1);
+	filter: contrast(1.1)
+}
+
+.box:hover .overlay {
+	bottom: 0;
+	height: 100%;
+}
 
 
