--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
     <link href="static/app.css" media="screen, projector, print" rel="stylesheet" type="text/css" />
   </head>
   <body>
