fixed error message

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -290,7 +290,7 @@
 	<label for="qty_tyres">Number of tyres:</label>
     <input type="text" name="qty_tyres" value="{{ buggy['qty_tyres'] }}" />
 	{% if tyre_err %}
-		<div id="error">{{color_err_msg}}</div>
+		<div id="error">{{tyre_err_msg}}</div>
 	{% endif %}
 	<p>
 	
